kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-app
  labels:
    app: movie-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie-app
  template:
    metadata:
      labels:
        app: movie-app
    spec:
      containers:
        - name: movie-app
          image: ghcr.io/0019-kdu/moviehub-devsecops-cicd:sha-9b187e86dd0f8d1744f1ac69c081d58972388a54
          # Image will be automatically updated by CI/CD pipeline
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      imagePullSecrets:
        - name: github-container-registry
