kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-app
  labels:
    app: movie-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: movie-app
